--- a/burger-queen/package.json
+++ b/burger-queen/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -11,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +30,23 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/betanyeli/SCL009-Burger-Queen.git"
+  },
+  "keywords": [
+    "React",
+    "JavaScript",
+    "Firebase"
+  ],
+  "author": "Beta, Efy, Majo",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/betanyeli/SCL009-Burger-Queen/issues"
+  },
+  "homepage": "https://betanyeli.github.io/SCL009-Burger-Queen"
 }
