adding firebase deploy and react route

--- a/burger-queen/package.json
+++ b/burger-queen/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
@@ -27,5 +28,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/betanyeli/SCL009-Burger-Queen.git"
+  },
+  "keywords": [
+    "react",
+    "library",
+    "burger-queen",
+    "JavaScript"
+  ],
+  "author": "B-F-M",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/betanyeli/SCL009-Burger-Queen/issues"
+  },
+  "homepage": "https://github.com/betanyeli/SCL009-Burger-Queen#readme"
 }
