--- a/burger-queen/.firebaserc
+++ b/burger-queen/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "burger-queen-labs"
+    "default": "burger-queen-labs",
+    "burger-queen": "burger-queen-labs"
   }
 }
