--- a/burger-queen/package.json
+++ b/burger-queen/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-  
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -35,7 +34,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "firebase": "^6.3.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/betanyeli/SCL009-Burger-Queen.git"
