structural changes in App.js

--- a/burger-queen/package.json
+++ b/burger-queen/package.json
@@ -61,5 +61,5 @@
   "bugs": {
     "url": "https://github.com/betanyeli/SCL009-Burger-Queen/issues"
   },
-  "homepage": "https://betanyeli.github.io/SCL009-Burger-Queen"
+  "homepage": "https://betanyeli.github.io/SCL009-Burger-Queen/burger-queen"
 }
